--- a/web/src/pages/PaymentGateway/paymentGateway.css
+++ b/web/src/pages/PaymentGateway/paymentGateway.css
@@ -7,14 +7,24 @@
 
 /* General Styling */
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
   background-color: #f7f7f7;
   display: flex;
+  flex-direction: column; 
   justify-content: center;
   align-items: center;
   min-height: 100vh;
 }
+
+.navbar{
+  width: 100%;
+  height: 10vh;
+  background-color: #f7f7f7;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
 
 /* Back to Home Button */
 #backButton {
@@ -44,7 +54,7 @@ body {
   display: flex;
   max-width: 1200px;
   background: #fff;
-  border-radius: 8px;
+  border-radius: 18px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
@@ -67,6 +77,14 @@ body {
   color: #44baff; 
 }
 
+.product-summary header p span{
+  color: #F12630;                           
+}
+
+.product-summary header p a span{
+  font-size: 10px;
+  color: #44baff;
+}
 .product-summary h1 {
   margin-top: 10px;
   color: #333;
@@ -79,8 +97,8 @@ body {
 }
 
 .price span {
-  font-size: 14px;
-  color: #777;
+  font-size: 21px;
+  color: #323232;
 }
 
 .items .item {
@@ -124,6 +142,7 @@ form label{
 .method {
   padding: 10px 20px;
   background: #eee;
+  border-radius: 5px; 
   border: 1px solid #ddd;
   flex: 1;
   margin: 0 5px;
@@ -139,6 +158,21 @@ form label{
   margin-bottom: 20px;
 }
 
+.form-group #cardNumber{
+  margin: 0;
+}
+
+.form-group #codName{
+  margin: 0;
+}
+
+.form-group #codPhone{
+  margin: 0;
+}
+
+.form-group #codAddress{
+  margin: 0;
+}
 input {
   width: 100%;
   padding: 10px;
@@ -177,7 +211,7 @@ input {
 }
 
 .method {
-  padding: 10px 20px;
+  padding: 10px 30px;
   background: #eee;
   border: 1px solid #ddd;
   flex: 1;
@@ -208,4 +242,158 @@ input {
 textarea {
   resize: none;
   height: 80px;
+}
+
+label{
+  color: #333;
+}
+
+.footer P{
+  margin-top: 10px;
+  text-align: center;
+  font-size: 10px;
+}
+
+#blank-section{
+  width: 100%;
+  height: 80px;
+}
+/* Footer section */
+footer{
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  z-index: 1;
+  /* right: 100; */
+  background-color: rgb(38, 38, 38);
+  color: rgb(255, 255, 255);
+  padding: 100px 0 30px 0;
+  border-top-left-radius: 125px;
+  font-size: 13px;
+  line-height: 20px;
+}
+footer .row{
+  width: 85%;
+  margin: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+footer .col{
+  flex-basis: 25%;
+  padding: 10px;
+}
+.col:nth-child(2), .col:nth-child(3){
+  flex-basis: 15%;
+}
+footer .col img{
+  width: 200px;
+  margin-bottom: 20px;
+}
+.col h3{
+  width: fit-content;
+  margin-bottom: 40px;
+  position: relative;
+}
+.email_id{
+  width: fit-content;
+  border-bottom: 1px solid rgb(255, 255, 255);
+  margin: 20px 0;
+}
+footer .col ul li{
+  list-style: none;
+  margin-bottom: 12px;
+}
+footer .col ul li a{
+  text-decoration: none;
+  color: #f4f4f4;
+}
+footer .col ul li a:hover{
+  color: #FFD04D;
+  transition: 0.3s;
+}
+footer .row .col form{
+  padding-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(255, 255, 255);
+  margin-bottom: 50px;
+}
+form #mail{
+  width: 18px;
+  margin-right: 10px;
+  margin-bottom: 0;
+}
+form #send{
+  width: 18px;
+  margin-bottom: 0;
+}
+form input{
+  width: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  color: rgb(255, 255, 255);
+}
+form button{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.social_icon .fa-brands{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 40px;
+  font-size: 30px;
+  color: black;
+  background-color: #f4f4f4;
+  margin-right: 15px;
+  cursor: ponter;
+}
+footer hr{
+  width: 90%;
+  border: 0;
+  border-bottom: 1px solid #f4f4f4;
+  margin: 20px auto;
+}
+footer p.copyright{
+  text-align: center;
+}
+.underline{
+  width: 100%;
+  height: 2px;
+  background-color: #767676;
+  border-radius: 2px;
+  position: absolute;
+  top: 25px;
+  left: 0;
+  overflow: hidden;
+}
+.underline span{
+  width: 15px;
+  height: 100%;
+  background-color: #f4f4f4;
+  border-radius: 2px;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  animation: moving 2s linear infinite;
+}
+#logout-btn{
+  position: absolute;
+  right: 30px;
+}
+
+@keyframes moving{
+  0%{
+      left: -20px;
+  }    
+  100%{
+      left: 100%;
+  }
 }
