Very minor change in delivery executive dashboard

--- a/web/src/pages/PaymentGateway/paymentGateway.css
+++ b/web/src/pages/PaymentGateway/paymentGateway.css
@@ -335,7 +335,7 @@ form input{
   background-color: transparent;
   outline: none;
   border: none;
-  color: rgb(255, 255, 255);
+/*  color: rgb(255, 255, 255);*/
 }
 form button{
   background-color: transparent;
