--- a/web/src/pages/PaymentGateway/paymentGateway.css
+++ b/web/src/pages/PaymentGateway/paymentGateway.css
@@ -15,39 +15,39 @@ body {
   min-height: 100vh;
 }
 
-.navbar{
+.navbar {
   width: 100%;
-  height: 10vh;
-  background-color: #f7f7f7;
-  display: flex;  
+  padding: 25px 0;
+  background-color: transparent;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
 }
 
+.logo {
+  font-size: 24px;
+  color: white;
+  font-weight: bold;
+  flex-grow: 1;
+  text-align: center;
+}
 
-/* Back to Home Button */
-#backButton {
+.back-button {
+  width: fit-content;
+  padding: 10px 10px;
   position: absolute;
   top: 20px;
   left: 20px;
-  font-size: 16px;
-  color: #007bff;
-  text-decoration: none;
-  background: #f5f5f5;
-  border: 1px solid #ddd;
-  padding: 8px 12px;
-  border-radius: 4px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-#backButton:hover {
-  background-color: #007bff;
+  background-color: #333;
+  border: none;
   color: white;
-}
-
-#backButton:active {
-  transform: scale(0.95); /* Button press effect */
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .container {
