--- a/web/src/pages/PaymentGateway/paymentGateway.css
+++ b/web/src/pages/PaymentGateway/paymentGateway.css
@@ -20,7 +20,7 @@ body {
   padding: 25px 0;
   background-color: transparent;
   text-align: center;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   z-index: 1;
@@ -39,7 +39,7 @@ body {
 
 .back-button {
   width: fit-content;
-  padding: 10px 10px;
+  padding: 10px 20px;
   position: absolute;
   top: 20px;
   left: 20px;
@@ -48,6 +48,7 @@ body {
   color: white;
   font-size: 16px;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .container {
